--- a/lib/eventasaurus_web/controllers/marketing/marketing_html/terms.html.heex
+++ b/lib/eventasaurus_web/controllers/marketing/marketing_html/terms.html.heex
@@ -88,7 +88,7 @@
         <.oat_footer_link href="/dev/marketing/terms">Terms</.oat_footer_link>
       </:links>
       <:fineprint>
-        © 2026 Wombie
+        © <%= Date.utc_today().year %> Wombie
       </:fineprint>
     </.oat_footer>
 
